# mobilenet_rock5_npu

./: CMakeLists.txt  README.md  get_dataset.py  img_dataset.txt  mobilenetv2_features.h  realtime_demo.cpp  requirements.txt  setup_env.sh  transfer.cpp
models/: classifier.pt  mobilenetv2_features.rknn
models/quant_acc_analysis/: error_analysis.txt  map_name_to_file.txt
models/quant_acc_analysis/golden/: _features_features_0_features_0_0_Conv_output_0.txt  _features_features_0_features_0_2_Clip_output_0.txt  _features_features_10_Add_output_0.txt  _features_features_10_conv_conv_0_conv_0_0_Conv_output_0.txt  _features_features_10_conv_conv_0_conv_0_2_Clip_output_0.txt  _features_features_10_conv_conv_1_conv_1_0_Conv_output_0.txt  _features_features_10_conv_conv_1_conv_1_2_Clip_output_0.txt  _features_features_10_conv_conv_2_Conv_output_0.txt  _features_features_11_conv_conv_0_conv_0_0_Conv_output_0.txt  _features_features_11_conv_conv_0_conv_0_2_Clip_output_0.txt  _features_features_11_conv_conv_1_conv_1_0_Conv_output_0.txt  _features_features_11_conv_conv_1_conv_1_2_Clip_output_0.txt  _features_features_11_conv_conv_2_Conv_output_0.txt  _features_features_12_Add_output_0.txt  _features_features_12_conv_conv_0_conv_0_0_Conv_output_0.txt  _features_features_12_conv_conv_0_conv_0_2_Clip_output_0.txt  _features_features_12_conv_conv_1_conv_1_0_Conv_output_0.txt  _features_features_12_conv_conv_1_conv_1_2_Clip_output_0.txt  _features_features_12_conv_conv_2_Conv_output_0.txt  _features_features_13_Add_output_0.txt  _features_features_13_conv_conv_0_conv_0_0_Conv_output_0.txt  _features_features_13_conv_conv_0_conv_0_2_Clip_output_0.txt  _features_features_13_conv_conv_1_conv_1_0_Conv_output_0.txt  _features_features_13_conv_conv_1_conv_1_2_Clip_output_0.txt  _features_features_13_conv_conv_2_Conv_output_0.txt  _features_features_14_conv_conv_0_conv_0_0_Conv_output_0.txt  _features_features_14_conv_conv_0_conv_0_2_Clip_output_0.txt  _features_features_14_conv_conv_1_conv_1_0_Conv_output_0.txt  _features_features_14_conv_conv_1_conv_1_2_Clip_output_0.txt  _features_features_14_conv_conv_2_Conv_output_0.txt  _features_features_15_Add_output_0.txt  _features_features_15_conv_conv_0_conv_0_0_Conv_output_0.txt  _features_features_15_conv_conv_0_conv_0_2_Clip_output_0.txt  _features_features_15_conv_conv_1_conv_1_0_Conv_output_0.txt  (+60 more)
python/: get_dataset.py  get_heartpattern.py  mobilenetv2_to_onnx.py  onnx_to_rknn.py  transfer.py
test/: onnx_model_test.py  rknn_model_test.py  rknnlite_model_test.py  rknnlite_model_unit_test.py
(+398 files in other folders)
